8246382: assert in MetaspaceShared::map_archives

Perform base archive header CRC check earlier.

Reviewed-by: iklam, coleenp